# ncatbot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  README.md.bak  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: pypi-publish.yml  pytest.yml
examples/quick_start/: backend_example.py  frontend_example.py
examples/tutorial/: poke.py
ncatbot/: __init__.py
ncatbot/adapter/: __init__.py
ncatbot/adapter/nc/: __init__.py  auth.py  config_manager.py  constants.py  platform.py  service.py  utils.py  websocket.py
ncatbot/cli/: main.py
ncatbot/cli/commands/: __init__.py  config_commands.py  info_commands.py  plugin_commands.py  registry.py  system_commands.py
ncatbot/cli/utils/: __init__.py  cli_exceptions.py  colors.py  constants.py
ncatbot/core/: __init__.py
ncatbot/core/api/: __init__.py  api.py  api_account.py  api_account.pyi  api_private.py  api_private.pyi  api_support.py  api_support.pyi  client.py
ncatbot/core/client/: __init__.py  client.py  dispatcher.py  event_bus.py  lifecycle.py  ncatbot_event.py  registry.py
ncatbot/core/event/: __init__.py  context.py  enums.py  events.py  mixins.py  models.py  parser.py
ncatbot/core/helper/: __init__.py  forward_constructor.py
ncatbot/plugin_system/: __init__.py  base_plugin.py  packhelper.py  pluginsys_err.py
ncatbot/plugin_system/builtin_mixin/: __init__.py  config_mixin.py  ncatbot_plugin.py  time_task_mixin.py
ncatbot/plugin_system/builtin_plugin/: __init__.py  system_manager.py
ncatbot/plugin_system/loader/: __init__.py  core.py  finder.py  importer.py  resolver.py
ncatbot/service/: __init__.py  base.py  manager.py
ncatbot/service/file_watcher/: __init__.py  service.py
ncatbot/service/message_router/: __init__.py  service.py
ncatbot/service/plugin_config/: __init__.py  persistence.py  (+2 more)
ncatbot/utils/: __init__.py  error.py  logger.py  status.py
test/cli/: __init__.py  conftest.py  test_config_commands.py  test_info_commands.py  test_main.py  test_plugin_commands.py  test_registry.py  test_system_commands.py
test/e2e/: README.md  __init__.py  conftest.py
test/integration/: __init__.py  conftest.py  test_config_integration_advanced.py  test_config_integration_core.py  test_event_pipeline.py  test_plugin_data_integration.py  test_plugin_integration.py  test_service_integration.py  test_startup_flow.py  test_unified_registry_integration.py
test/message_router/: __init__.py  test_message_router.py
test/plugin_system/: __init__.py  test_api_injection.py  test_cross_plugin_deep_import.py  test_cross_plugin_folder_name.py  test_cross_plugin_import.py  test_import_error_handling.py  test_pluginsys_err.py  test_relative_import_basic.py
test/rbac/: __init__.py  conftest.py  test_integration.py  test_permission_path.py  test_permission_trie.py  test_service.py  test_storage.py
test/service/: __init__.py  test_config_service.py  test_config_types.py  test_plugin_data_service.py  test_preupload_processor.py  test_preupload_utils.py  test_rbac_service.py  test_service.py  test_stream_upload.py
test/utils/: __init__.py  test_error.py  test_status.py  test_testing_suite.py
(+306 files in other folders)
